; ModuleID = '/home/carl/AnghaBench/git/extr_rerere.c_rerere_path.c'
source_filename = "/home/carl/AnghaBench/git/extr_rerere.c_rerere_path.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rerere_id = type { i64 }

@.str = private unnamed_addr constant [12 x i8] c"rr-cache/%s\00", align 1
@.str.1 = private unnamed_addr constant [15 x i8] c"rr-cache/%s/%s\00", align 1
@.str.2 = private unnamed_addr constant [18 x i8] c"rr-cache/%s/%s.%d\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @rerere_path(%struct.rerere_id* %0, i8* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca %struct.rerere_id*, align 8
  %5 = alloca i8*, align 8
  store %struct.rerere_id* %0, %struct.rerere_id** %4, align 8
  store i8* %1, i8** %5, align 8
  %6 = load i8*, i8** %5, align 8
  %7 = icmp ne i8* %6, null
  br i1 %7, label %12, label %8

8:                                                ; preds = %2
  %9 = load %struct.rerere_id*, %struct.rerere_id** %4, align 8
  %10 = call i32 @rerere_id_hex(%struct.rerere_id* %9)
  %11 = call i8* (i8*, i32, ...) @git_path(i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str, i64 0, i64 0), i32 %10)
  store i8* %11, i8** %3, align 8
  br label %30

12:                                               ; preds = %2
  %13 = load %struct.rerere_id*, %struct.rerere_id** %4, align 8
  %14 = getelementptr inbounds %struct.rerere_id, %struct.rerere_id* %13, i32 0, i32 0
  %15 = load i64, i64* %14, align 8
  %16 = icmp sle i64 %15, 0
  br i1 %16, label %17, label %22

17:                                               ; preds = %12
  %18 = load %struct.rerere_id*, %struct.rerere_id** %4, align 8
  %19 = call i32 @rerere_id_hex(%struct.rerere_id* %18)
  %20 = load i8*, i8** %5, align 8
  %21 = call i8* (i8*, i32, ...) @git_path(i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.1, i64 0, i64 0), i32 %19, i8* %20)
  store i8* %21, i8** %3, align 8
  br label %30

22:                                               ; preds = %12
  %23 = load %struct.rerere_id*, %struct.rerere_id** %4, align 8
  %24 = call i32 @rerere_id_hex(%struct.rerere_id* %23)
  %25 = load i8*, i8** %5, align 8
  %26 = load %struct.rerere_id*, %struct.rerere_id** %4, align 8
  %27 = getelementptr inbounds %struct.rerere_id, %struct.rerere_id* %26, i32 0, i32 0
  %28 = load i64, i64* %27, align 8
  %29 = call i8* (i8*, i32, ...) @git_path(i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.2, i64 0, i64 0), i32 %24, i8* %25, i64 %28)
  store i8* %29, i8** %3, align 8
  br label %30

30:                                               ; preds = %22, %17, %8
  %31 = load i8*, i8** %3, align 8
  ret i8* %31
}

declare dso_local i8* @git_path(i8*, i32, ...) #1

declare dso_local i32 @rerere_id_hex(%struct.rerere_id*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
